Closed Bug 1813344 Opened 3 years ago Closed 3 years ago

HTMLInputElement::IntrinsicState() is slow

Categories

(Core :: XPCOM, defect)

defect

Tracking

()

RESOLVED FIXED
111 Branch
Tracking Status
firefox111 --- fixed

People

(Reporter: smaug, Assigned: smaug)

References

(Blocks 1 open bug)

Details

(Whiteboard: [sp3])

Attachments

(1 file)

https://share.firefox.dev/3wCmxbX from speedometer jQuery-TodoMVC

Duplicate of this bug: 1808248
Component: DOM: Core & HTML → XPCOM
Assignee: nobody → smaug
Status: NEW → ASSIGNED
No longer depends on: 1808248
Pushed by opettay@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/3aa385db23be don't allocate unnecessarily in nsTSubstring<T>::StripTaggedASCII, r=nika
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 111 Branch
Whiteboard: [sp3]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: