Bug 1813344, don't allocate unnecessarily in nsTSubstring<T>::StripTaggedASCII, r=nika

Differential Revision: https://phabricator.services.mozilla.com/D168210